
<resources>

    <string name="app_name">醒来闹钟</string>

    <string name="title_activity_add_alarm">添加闹钟</string>
    <string name="title_activity_edit_alarm">编辑闹钟</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_finish">退出</string>
    <string name="add_alarm">闹钟名</string>
    <string name="details">设置闹钟</string>
    <string name="date">Date</string>
    <string name="time">时间</string>
    <string name="repeat">响铃周期</string>
    <string name="repeat_off">Off</string>
    <string name="wake_method">停闹方式</string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_alarm">Discard Alarm</string>
    <string name="action_save_alarm">Save Alarm</string>
    <string name="no_alarm">点击 + 添加闹钟</string>
    <string name="popup_menu_edit">编辑</string>
    <string name="popup_menu_delete">删除</string>
    <string name="popup_menu_more">期待更多</string>
    <string name="shengming">"    本软件由初初初级安卓程序员独立开发，\n不具有任何商业目的,仅作交流和学习使用,\n并在GitHub上提供开源代码,遵守那一大串的\n开源协议(看不懂╯﹏╰).\n    如果您有任何疑问或建议，欢迎与我联系"</string>
    <string name="app_name_ver">醒来闹钟 v1.0</string>
    <string name="email">邮箱：</string>
    <string name="github">GitHub：</string>
    <string name="emali_adress">" 1334553391@qq.com"</string>
    <string name="github_adress">" github.com/zyascend"</string>
    <string name="ring_type">响铃方式</string>
    <string name="calculate_name">数学计算</string>
    <string name="ca_details">随机生成数学计算题，需回答正确关闭闹钟</string>
    <string name="ca_set">点我设置</string>
    <string name="question">自定义问题</string>
    <string name="que_details">自定义问题和答案，回答正确才能关闭闹钟</string>
    <string name="que_set">点我设置</string>
    <string name="set_que">请输入您的问题：</string>
    <string name="an_input">请输入问题的答案：</string>
    <string name="que_sure">确定并保存</string>
    <string name="que_can">取消</string>
    <string name="answer_hint">答案输在这儿...</string>
    <string name="input_complete">输入好了</string>
    <string name="alarm_complete">闹钟时间到</string>

</resources>
