<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_back"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_ver"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shengming"
        android:textColor="@color/primary_text_grey"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:layout_marginTop="53dp"
        android:text="@string/email"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/imageView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:layout_marginTop="23dp"
        android:text="@string/github"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:id="@+id/textView8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_grey"
        android:textSize="15sp"
        android:text="@string/emali_adress"
        android:id="@+id/textView7"
        android:autoLink="all"
        android:textColorLink="#00B0FF"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_grey"
        android:textSize="15sp"
        android:text="@string/github_adress"
        android:autoLink="all"
        android:textColorLink="#00B0FF"
        android:layout_alignTop="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:id="@+id/te8" />
</RelativeLayout>