<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/card_up"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card:cardElevation="3dp"
            card:cardCornerRadius="2dp"
            card:cardBackgroundColor="@color/background_alarm_white">
            <RelativeLayout
                android:background="@color/background_alarm_white"
                android:id="@+id/rela_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/cal_ima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cal_back"/>
                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="14dp"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_name"
                    android:layout_below="@+id/cal_ima"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView_cal_tittle" />
                <TextView
                    android:id="@+id/textView_cal_det"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:layout_below="@+id/textView_cal_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text_grey"
                    android:text="@string/ca_details"
                    />
                <Button
                    android:id="@+id/set_calculate_que_btn"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ca_set"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/button_orange"
                    android:background="@android:color/transparent"
                    android:layout_below="@id/textView_cal_det"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/card_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card:cardElevation="3dp"
            card:cardCornerRadius="2dp"
            card:cardBackgroundColor="@color/background_alarm_white">
            <RelativeLayout
                android:background="@color/background_alarm_white"
                android:id="@+id/rela_que"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/que_ima"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ques_bac"/>
                <TextView
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:layout_below="@+id/que_ima"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView_que_tittle" />
                <TextView
                    android:id="@+id/textView_que_det"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_below="@+id/textView_que_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text_grey"
                    android:text="@string/que_details" />
                <Button
                    android:id="@+id/set_que_btn"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/que_set"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/button_orange"
                    android:background="@android:color/transparent"
                    android:layout_below="@id/textView_que_det"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/set_que_ans_lay">
                <TextView

                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_que"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:id="@+id/textView_q"
                    android:layout_marginStart="14dp" />
                <EditText
                    android:background="@drawable/bg_ed"
                    android:layout_below="@+id/textView_q"
                    android:id="@+id/ques_editText"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:lines="4"
                    android:minLines="4"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/primary_text_grey"
                    android:scrollHorizontally="false"
                    android:textColorHint="@color/editText_hint"
                    android:inputType="textCapWords|textMultiLine"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_height="100dp" />
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/an_input"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/ques_editText"
                    android:id="@+id/textView2" />
                <EditText
                    android:background="@drawable/bg_ed"
                    android:layout_below="@+id/textView2"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:lines="4"
                    android:minLines="4"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/primary_text_grey"
                    android:scrollHorizontally="false"
                    android:textColorHint="@color/editText_hint"
                    android:inputType="textCapWords|textMultiLine"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_height="100dp"
                    android:id="@+id/answer_editText"
                     />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/question_sure_btn"
                    android:background="@android:color/transparent"
                    android:text="@string/que_sure"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/button_orange"
                    android:layout_alignTop="@+id/question_cancel_btn"
                    android:layout_alignStart="@+id/textView2" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/question_cancel_btn"
                    android:background="@android:color/transparent"
                    android:text="@string/que_can"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/button_orange"
                    android:layout_marginBottom="16dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>