

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/primary"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/alarm_title"
            android:layout_marginStart="72dp"
            android:hint="@string/add_alarm"
            android:textSize="25sp"
            android:lines="4"
            android:minLines="4"
            android:gravity="top|left"
            android:textColor="@android:color/white"
            android:scrollHorizontally="false"
            android:textColorHint="@color/editText_hint"
            android:inputType="textCapWords|textMultiLine"
            android:layout_marginEnd="16dp"
            android:layout_height="140dp"/>

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/details"
                android:id="@+id/details"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginStart="72dp"
                android:textColor="@color/primary_text_grey"
                android:layout_height="40dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="selectTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:textColor="@color/primary"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="15sp"
                        android:textColor="@color/primary_text_grey"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="selectRepeat"
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_repeat_grey_600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:textColor="@color/primary"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat" />

                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="15sp"
                        android:textColor="@color/primary_text_grey"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/wake_re"
                android:clickable="true"
                android:onClick="selectWake"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/wake_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_power_settings_new_grey_600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/wake_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/wake_text"
                        android:textColor="@color/primary"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:text="@string/wake_method" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_wake"
                        android:textSize="15sp"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/primary_text_grey"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/holdSleep"
                android:clickable="true"
                android:onClick="selectRing"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/holdSleep_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_notifications_paused_grey_600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/holdSleep_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/holdSleep_text"
                        android:textColor="@color/primary"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:text="@string/ring_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_ring"
                        android:textSize="15sp"
                        android:textColor="@color/primary_text_grey"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>



    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_icon="@drawable/ic_notifications_off_grey600_24dp"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        app:fab_size="normal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary"
        app:fab_size="normal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"/>

</RelativeLayout>
